<resources>
    <string name="app_name">Cars and Bids</string>
    <string name="cars_and_bids_title">Cars And Bids</string>
    <string name="submit_title_text">Tell us about your car</string>
    <string name="submit_title_descript"><![CDATA[Give us the following info and we’ll quickly review your car to decide if it’s a fit for Cars & Bids. If your car is accepted, we’ll ask for more details and photos, collect the listing fee, and work with you to get the auction live.]]></string>
    <string name="submit_your_info_subtitle">Your Info</string>
    <string name="submit_who_is_selling">Dealer or private party</string>
    <string name="submit_dealer_button">Dealer</string>
    <string name="submit_private_button">Private party</string>
    <string name="submit_your_name_text">Your name</string>
    <string name="submit_phone">Contact phone number</string>
    <string name="submit_car_details_subtitle">Car Details</string>
    <string name="submit_forsale_where">Is this car for sale elsewhere?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="year">Year</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="vin">VIN</string>
    <string name="mileage">Mileage</string>
    <string name="car_location">Where is the car located?</string>
    <string name="united_states">United States</string>
    <string name="canada">Canada</string>
    <string name="submit_things_to_note">Noteworthy options/features</string>
    <string name="has_it_been_modified">Has it been modified?</string>
    <string name="completely_stock">Completely stock</string>
    <string name="modified">Modified</string>
    <string name="title_info">Title Info</string>
    <string name="car_title_location">Where is the car titled?</string>
    <string name="title_in_your_name">Is the title in your name?</string>
    <string name="titles_status_text">What is the titles status?</string>
    <string name="reserve_price">Reserve Price</string>
    <string name="ask_for_reserve_yn">Do you want to sell a minimum price required for your vehicle to sell?</string>
    <string name="photos">Photos</string>
    <string name="referral">Referral</string>
    <string name="referral_text">How did you hear about us? If a user referred, please leave their username</string>
    <string name="submit">Submit</string>
    <string name="submit_lienholder_on_title">Is there a lienholder on the title?</string>
    <string name="additional_fees">Are there any additional fees the buyer will have to pay? If so, what are they?</string>
    <string name="dealer_name">Dealership name</string>
    <string name="dealer_website">Dealership website</string>
    <string name="other_listings_warning">If we accept your car, all other listings will need to be taken down before it can be listed on our site</string>
    <string name="link_other_listings">Please link to all existing listings</string>
    <string name="zip_code">Zip code</string>
    <string name="city_and_province">City and Province</string>
    <string name="whats_been_modified">What has been modified on the vehicle?</string>
    <string name="state">State</string>
    <string name="province">Province</string>
    <string name="whos_name_on_title">Who\'s name is on the title?</string>
    <string name="what_reserve_price">What reserve price would you like (USD)?</string>
    <string name="add_more_links">+ Add more links</string>
    <string name="select_photo">Select Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="please_submit_8_16_photos">Please submit 8–16 photos</string>
    <string name="clear_all">Clear All</string>
    <string name="delete">Delete</string>
    <string name="valid_your_name">Please enter your name</string>
    <string name="select_dealer_error">* Please select dealer or private party</string>
    <string name="submit_sold_elsewhere_error">* Please select if car is sold elsewhere</string>
    <string name="submit_year_error">* Please select a year</string>
    <string name="select_country_error">* Please select a country</string>
    <string name="submit_stock_or_mod_error">* Please select stock or modified</string>
    <string name="select_title_loc_error">* Please select location of title</string>
    <string name="select_option_error">* Please select an option</string>
    <string name="title_status_error">* Please select title status</string>
    <string name="too_many_photos_error">* Please submit no more than 16 photos</string>
    <string name="not_enough_photos_error">* Please submit at least 8 photos</string>
    <string name="home">Auctions</string>
    <string name="sell_car">Sell a Car</string>
    <string name="about">About</string>
    <string name="what_s_cars_bids"><![CDATA[What\'s Cars & Bids?]]></string>
    <string name="cool_car_auctions">Cool Car Auctions</string>
    <string name="about_cool_car_descript">\t\tAuction you modern enthusiast or cool car — anything from the 1980s to now.
        \n
        \n\t\tTo us, \"cool\" ranges from the obvious (Ferraris, Lamborghinis, Aston Martin, etc.) to the esoteric (a pristine Dodge Dakota Convertible or a Mercury Capri XR2) to the traditional fun cars that enthusiasts love (a Mazda MX-5 Miata or a Porsche 911). Basically, if it\'s exciting, fun, interesting, or quirky and it is from the modern era, it is welcome here on Cars &amp; Bids.</string>
    <string name="about_low_fees_subtitle">Low Fees</string>
    <string name="about_low_fees_descript">\t\tBuyers pay a 4.5% commission, capped at $4,500. Seller listing fee starts at $49. \n\n
        \t\tThe buyer\'s fee is a minimum of \$225 and a maximum of \$4,500. The seller\'s fee is \$49 for a no-reserve auction or repeat seller and \$89 for a first-time seller with a reserve auction.</string>
    <string name="free_history_report">Free History Report</string>
    <string name="free_vehicle_history_reports">\t\tWe provide free vehicle history reports for every vehicle listed. We believe every vehicle should come with a vehicle history report, so we provide one for free, instead of having the sellers pay for their own.</string>
    <string name="easy_to_use">Easy to Use</string>
    <string name="about_easy_use_descript">\t\tWe\'ve developed several new features that innovate buying and selling enthusiast cars online. \n\n
        \t\tFrom making it so a seller only needs to provide crucial information when applying to sell, to simplified sorting and searching when buying, to quickly getting cars up for auction; Cars &amp; Bids offers an easy-to-use car auction platform.</string>
    <string name="doug_demuro_s_platform">Doug Demuro\'s Platform</string>
    <string name="about_doug_demuro_descript">\t\tDoug Demuro brings his years of experience in the car industry to Cars &amp; Bids. \n\n\t\tFrom his successful YouTube channel reviewing cars to his time before that doing. Doug has built a large car enthusiast platform that he now brings to
        Cars &amp; Bids. Periodically, Doug will review cars offered on Cars &amp; Bids which would bring many more eyes to a listing.</string>
    <string name="about_how_it_works_title">How does it work?</string>
    <string name="buying_a_car">Buying a Car</string>
    <string name="selling_a_car">Selling a car</string>
    <string name="about_buying_a_car_summary"><b>Summary:</b>
        \n <li>Account required to make a bid.</li>
        \n <li>Can contact seller both privately and publicly.</li>
        \n <li>Once a bid is placed, we hold 4.5% of bid on your credit card.</li>
        \n <li>If a bid is placed within a minute left of auction ending, timer reset to 1 minute.</li>
        \n <li>Once auction complete, we take the 4.5% commission from winning bidder and release the hold from all other bidders.</li>
        \n <li>We will send the winning bidder the seller\'s contact information so the remaining details and transactions can be completed.</li>
        \n <li>If highest bid does not meet reserve, we will talk to seller and highest bidder to try and make it work. We will even take a 2.5% commission fee instead of 4.5%.</li></string>
    <string name="about_selling_a_car_summary"><b>Summary:</b>
        \n <li>Account required to fill out form.</li>
        \n <li>After completing the submission form we will review it and if accepted, we will let you know via email!</li>
        \n <li>Follow the link in the email to provide more information and more photos.</li>
        \n <li>Once we get all your information, we will make your listing and send it to you for approval.</li>
        \n <li>If you do approve, then we will figure out a good time to post your car, where it will be for sale for 7 days.</li>
        \n <li>During those 7 days, we strongly encourage every seller to keep up with the conversation about your vehicle. Respond to questions, comments, etc., because doing so increases chances of getting the most money possible for your car.</li>
        \n <li>Once the auction is done, we will send the seller the winning bidder\'s contact information so the remaining details and transactions can be completed.</li>
        \n <li>If the auction closes without a sale, we will communicate with the seller and highest bidder to try to work out a deal.</li></string>
    <string name="no_reserve">NO RESERVE</string>
    <string name="detailed_seller_info"><u>Seller:</u> %1$s</string>
    <string name="detailed_seller_type">Seller Type: %1$s</string>
    <string name="detailed_title_status">Title Status: %1$s</string>
    <string name="detailed_title_location">Title Location: %1$s</string>
    <string name="detailed_mileage">Mileage: %1$s</string>
    <string name="detailed_mods">Modifications: %1$s</string>
    <string name="detailed_caseys_take_title">Casey\'s Take</string>
    <string name="detailed_caseys_take_text">This is a great car! Such a great color and features. It has four wheels, at least one door, contains a steering wheel, and pedals. At this point I am filling the text as to make it seem like there is a lot of talk about my take.</string>
    <string name="highlights">Highlights</string>
    <string name="highlights_descript"><i>THIS</i>....is a really neat little car:
        \n\t <li>It has a steering wheel</li>
        \n\t <li>It has seats</li>
        \n\t <li>It runs on a motor</li>
        \n\t <li>It is also has been painted in a particular color</li></string>
    <string name="equipment">Equipment</string>
    <string name="detailed_equip_descript">
        \t <li>Suspension</li>
        \n\t <li>Tires</li>
        \n\t <li>More Equipment</li>
        \n\t <li>Seats</li>
        \n\t <li>Equipment</li>
    </string>
    <string name="modifications">Modifications</string>
    <string name="detailed_mods_descript">
        \t <li>Custom Paint</li>
        \n\t <li>Aftermarket Wheels</li>
        \n\t <li>Another one</li>
        \n\t <li>Racing Seat</li>
        \n\t <li>Mods Number 5</li>
    </string>
    <string name="known_flaws">Known Flaws</string>
    <string name="detailed_flaws_descript">
        \t <li>Some paint chips</li>
        \n\t <li>Seat belt buckle issues</li>
        \n\t <li>Replaced driver side-skirt</li>
        \n\t <li>Another Flaw</li>
        \n\t <li>Flaw Number 5</li></string>
    <string name="recent_service_history">Recent Service History</string>
    <string name="detailed_service_descript">
        \t <li>In 2019 got professional full maintenance check</li>
        \n\t <li>Recently changed oil and tires</li>
    </string>
    <string name="detailed_seller_info_title">Seller Ownership History and Notes</string>
    <string name="detailed_seller_info_descript">
        \t <li>The seller has owned this vehicle since 2015</li>
        \n\t <li>The seller says they are selling the vehicle due to needing space in driveway for a tank</li>
    </string>
</resources>